--- a/samples/app/src/main/AndroidManifest.xml
+++ b/samples/app/src/main/AndroidManifest.xml
@@ -28,12 +28,12 @@
     <application
         android:name=".SampleApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name">
+        android:icon="@drawable/twitter_ic_launcher"
+        android:label="@string/twitter_app_name">
 
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:name=".TwitterSampleActivity"
+            android:label="@string/twitter_sample_activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
