Make debugCompile dependencies androidTestCompile where possible
- Make mockito, dexmaker-mockito androidTestCompile dependencies instead of
debugCompile. These used to be debugCompile so classes that depended on fabric
debug got these dependencies for free. However, this causes problems for
projects that later want to use roboelectric, which doesn't work with
dexmaker-mockito.

Change-Id: Ica0ed3833061d1702af001238aa263b868ff0b2f

--- a/tweet-composer/build.gradle
+++ b/tweet-composer/build.gradle
@@ -55,7 +55,7 @@ android {
 dependencies {
     compile rootProject.fabric
 
-    debugCompile rootProject.fabricTest
-    debugCompile rootProject.mockito
-    debugCompile rootProject.dexmakerMockito
+    androidTestCompile rootProject.fabricTest
+    androidTestCompile rootProject.mockito
+    androidTestCompile rootProject.dexmakerMockito
 }
