--- a/twitter-core/build.gradle
+++ b/twitter-core/build.gradle
@@ -91,7 +91,7 @@ dependencies {
         transitive = false
     }
 
-    debugCompile rootProject.mockito
-    debugCompile rootProject.dexmakerMockito
-    debugCompile rootProject.fabricTest
+    androidTestCompile rootProject.mockito
+    androidTestCompile rootProject.dexmakerMockito
+    androidTestCompile rootProject.fabricTest
 }
