--- a/twitter/build.gradle
+++ b/twitter/build.gradle
@@ -58,4 +58,8 @@ dependencies {
 
     compile rootProject.digits
     compile rootProject.fabric
+
+    androidTestCompile rootProject.mockito
+    androidTestCompile rootProject.dexmakerMockito
+    androidTestCompile rootProject.fabricTest
 }
