--- a/tweet-composer/internal-build.gradle
+++ b/tweet-composer/internal-build.gradle
@@ -82,4 +82,7 @@ dependencies {
         debugCompile project(path: it, configuration: 'debug')
         releaseCompile kitDependency(path: it, configuration: 'release')
     }
+
+    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2',
+            'org.mockito:mockito-core:1.9.5'
 }
