--- a/tweet-ui/internal-build.gradle
+++ b/tweet-ui/internal-build.gradle
@@ -89,5 +89,10 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-v4:21.0.0'
 
+    debugCompile 'com.google.dexmaker:dexmaker-mockito:1.2',
+            'org.mockito:mockito-core:1.9.5'
+
     androidTestCompile 'com.squareup.retrofit:retrofit-mock:1.6.1'
+    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2',
+            'org.mockito:mockito-core:1.9.5'
 }
