--- a/twitter/internal-build.gradle
+++ b/twitter/internal-build.gradle
@@ -84,4 +84,6 @@ dependencies {
         debugCompile project(path: it, configuration: 'debug')
         releaseCompile kitDependency(path: it, configuration: 'release')
     }
+    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2',
+            'org.mockito:mockito-core:1.9.5'
 }
