Convert twitter androidTest to junit tests.
Change-Id: Icc775c931d22722de023dc08ea0404260cbf3863

--- a/tweet-composer/build.gradle
+++ b/tweet-composer/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     testCompile rootProject.mockito
     testCompile rootProject.junit
     testCompile rootProject.mavenAntTasks
-    testCompile(roboelectric) {
+    testCompile(rootProject.roboelectric) {
         exclude group: 'commons-logging', module: 'commons-logging'
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     }
