--- a/twitter/internal-build.gradle
+++ b/twitter/internal-build.gradle
@@ -69,6 +69,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 ext.projectDependencies = [
@@ -84,6 +88,13 @@ dependencies {
         debugCompile project(path: it, configuration: 'debug')
         releaseCompile kitDependency(path: it, configuration: 'release')
     }
-    androidTestCompile rootProject.mockito
-    androidTestCompile rootProject.dexmakerMockito
+
+    testCompile rootProject.mockito
+    testCompile rootProject.junit
+    testCompile rootProject.mavenAntTasks
+    testCompile(rootProject.roboelectric) {
+        exclude group: 'commons-logging', module: 'commons-logging'
+        exclude group: 'org.apache.httpcomponents', module: 'httpclient'
+    }
 }
+
