--- a/tweet-ui/build.gradle
+++ b/tweet-ui/build.gradle
@@ -81,7 +81,7 @@ dependencies {
     testCompile rootProject.mockito
     testCompile rootProject.junit
     testCompile rootProject.mavenAntTasks
-    testCompile(rootProject.roboelectric) {
+    testCompile(rootProject.robolectric) {
         exclude group: 'commons-logging', module: 'commons-logging'
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     }
