Revert "Fix Robolectric references for OSS build on Twitter"
This reverts commit 4a3e8e4b927376d631a6f639e79b66399700b404.

Change-Id: Ib175d563934c226ba792f11173063de48ab40345

--- a/tweet-ui/build.gradle
+++ b/tweet-ui/build.gradle
@@ -81,7 +81,7 @@ dependencies {
     testCompile rootProject.mockito
     testCompile rootProject.junit
     testCompile rootProject.mavenAntTasks
-    testCompile(rootProject.robolectric) {
+    testCompile(rootProject.roboelectric) {
         exclude group: 'commons-logging', module: 'commons-logging'
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     }
