Add debugCompile fabric test to TwitterCore
Change-Id: I9348d78c9d99127eedb1f23dc28bb86199d1f254

--- a/twitter-core/build.gradle
+++ b/twitter-core/build.gradle
@@ -83,6 +83,8 @@ dependencies {
     compile rootProject.retrofit
     compile rootProject.gson
 
+    debugCompile rootProject.fabricTest
+
     //Will use the provided packages if they are available in the app developers workspace.
     provided rootProject.okHttp
     provided rootProject.okHttpUrlConnection
