--- a/twitter/internal-build.gradle
+++ b/twitter/internal-build.gradle
@@ -21,6 +21,7 @@ apply from: rootProject.qualityScript
 apply from: rootProject.sizeScript
 apply from: rootProject.deployScript
 apply plugin: com.twitter.one.gradle.FabricPropertiesPlugin
+apply plugin: com.twitter.one.gradle.release.FabricKitReleasePlugin
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
@@ -95,6 +96,31 @@ dependencies {
     testCompile(rootProject.robolectric) {
         exclude group: 'commons-logging', module: 'commons-logging'
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
+    }
+}
+
+fabricKitRelease {
+    apiKey = project.hasProperty('TWITTER_KIT_API_KEY') ? project.TWITTER_KIT_API_KEY : ""
+    friendlyName = "Twitter"
+    name = "${project.pom_group_id}.${project.pom_artifact_id}"
+    description = "Integrate Log in with Twitter, embed Tweets, and leverage the Twitter API."
+    version = project.version
+    artifactUrl = "https://maven.fabric.io/repo/com/twitter/sdk/android/twitter/${project.version}/twitter-${project.version}.pom"
+    releaseNotesUrl = "https://s3.amazonaws.com/kits-crashlytics-com/android/com/twitter/sdk/android/twitter/${project.version}/twitter-${project.version}-release-notes.html"
+    createdAt = System.currentTimeMillis()
+    learnMoreUrl = "https://dev.twitter.com/twitter"
+    price {
+        plan = "free"
+    }
+    license {
+        name = "Twitter"
+        url = "https://twitter.com/tos"
+    }
+    releaseChannel = "public"
+    minBuild = 0
+    maxBuild = Integer.MAX_VALUE
+    minPlatformVersion {
+        apiVersion "8"
     }
 }
 
