--- a/twitter/internal-build.gradle
+++ b/twitter/internal-build.gradle
@@ -124,3 +124,4 @@ fabricKitRelease {
     }
 }
 
+project.tasks.getByName('fabricKitRelease').enabled = rootProject.ext.projectsForRelease.contains(project.path)
