Prepare for June 23 Kit release.
Kits for release:
* :sdk:kits:crashlytics
* :sdk:kits:crashlytics-core
* :sdk:digits:digits
* :sdk:kits:crashlytics-ndk
* :sdk:kits:beta

Commented out things relying on project dependencies that aren't being shipped.

Change-Id: I8c1126db6ce65d242f8456782ba572b0cfc0e1f7

--- a/tweet-ui/internal-build.gradle
+++ b/tweet-ui/internal-build.gradle
@@ -105,7 +105,7 @@ dependencies {
     androidTestCompile rootProject.mockito
     androidTestCompile rootProject.dexmakerMockito
 
-    testCompile project(path: ':sdk:fabric:fabric', configuration: 'debug')
+//    testCompile project(path: ':sdk:fabric:fabric', configuration: 'debug')
     testCompile rootProject.mockito
     testCompile rootProject.junit
     testCompile rootProject.mavenAntTasks
