Refactor buildSrc into an independent project.
- New independent build project, called build-plugin
- Sub module kit-release will be released into public and it will
  allow 3rd party kit developers to use it.
- Sub module weaving is for fabric internal build toolings.

Change-Id: I63d4332531746915e65941d661dd185c2e160dd6

--- a/twitter-core/internal-build.gradle
+++ b/twitter-core/internal-build.gradle
@@ -20,7 +20,7 @@ apply plugin: 'com.android.library'
 apply from: rootProject.qualityScript
 apply from: rootProject.sizeScript
 apply from: rootProject.deployScript
-apply plugin: com.twitter.one.gradle.FabricPropertiesPlugin
+apply plugin: io.fabric.gradle.weaving.FabricPropertiesPlugin
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
