Revert build script changes blocking deploys
Change-Id: If9ac94daea434fd74421ba9560ac078206d0bbc5

--- a/twitter-core/internal-build.gradle
+++ b/twitter-core/internal-build.gradle
@@ -89,9 +89,7 @@ android {
 
 dependencies {
 
-    debugCompile project(':sdk:fabric:fabric')
-    debugCompile rootProject.fabricTest
-
+    debugCompile project(path: ':sdk:fabric:fabric', configuration: 'debug')
     releaseCompile kitDependency(path:':sdk:fabric:fabric', configuration: 'release')
 
     compile 'com.squareup.retrofit:retrofit:1.6.1'
