--- a/tweet-composer/internal-build.gradle
+++ b/tweet-composer/internal-build.gradle
@@ -21,6 +21,7 @@ apply from: rootProject.qualityScript
 apply from: rootProject.sizeScript
 apply from: rootProject.deployScript
 apply plugin: io.fabric.gradle.weaving.FabricPropertiesPlugin
+apply plugin: io.fabric.gradle.weaving.DexMethodCountPlugin
 
 repositories {
     mavenLocal()
@@ -59,6 +60,10 @@ android {
 
     jacoco {
         version = jacocoVersion
+    }
+
+    dexMethodCount {
+        packageFilter = "com.twitter.sdk.android.tweetcomposer"
     }
 
     //Gradle publishes only release by default for multi module projects
