--- a/twitter-core/internal-build.gradle
+++ b/twitter-core/internal-build.gradle
@@ -21,6 +21,7 @@ apply from: rootProject.qualityScript
 apply from: rootProject.sizeScript
 apply from: rootProject.deployScript
 apply plugin: io.fabric.gradle.weaving.FabricPropertiesPlugin
+apply plugin: io.fabric.gradle.weaving.DexMethodCountPlugin
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
@@ -74,6 +75,10 @@ android {
 
     jacoco {
         version = jacocoVersion
+    }
+
+    dexMethodCount {
+        packageFilter = "com.twitter.sdk.android.core"
     }
 
     //Gradle publishes only release by default for multi module projects
