--- a/samples/app/build.gradle
+++ b/samples/app/build.gradle
@@ -64,5 +64,7 @@ android {
 
 dependencies {
     compile project(':twitter')
-    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile rootProject.appCompat
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
 }
