Migrate artifact size script to gradle plugin
- Add flavor support

Change-Id: I3b296c82afe2b51f8f3678c6c0ea31a8194ded5c

--- a/twitter/internal-build.gradle
+++ b/twitter/internal-build.gradle
@@ -18,8 +18,8 @@
 apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.library'
 apply from: rootProject.qualityScript
-apply from: rootProject.sizeScript
 apply from: rootProject.deployScript
+apply plugin: io.fabric.gradle.weaving.ArtifactSizePlugin
 apply plugin: io.fabric.gradle.weaving.FabricPropertiesPlugin
 apply plugin: io.fabric.gradle.release.FabricKitReleasePlugin
 
