--- a/samples/app/build.gradle
+++ b/samples/app/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     }
 
     dependencies {
+        classpath 'com.stanfy.spoon:spoon-gradle-plugin:0.14.1'
         classpath 'com.android.tools.build:gradle:1.2.3'
         classpath 'io.fabric.tools:gradle:1.19.0'
     }
@@ -20,7 +21,7 @@ try {
 
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
-
+apply plugin: 'spoon'
 
 repositories {
     mavenCentral()
@@ -37,6 +38,7 @@ android {
         versionName "1.0"
         minSdkVersion 9
         targetSdkVersion rootProject.targetSdkVersion
+        testInstrumentationRunner "com.example.app.SpoonInstrumentationTestRunner"
     }
 
     buildTypes {
@@ -49,6 +51,16 @@ android {
             buildConfigField "String", "CONSUMER_SECRET", "\"${props.getProperty("twitterConsumerSecret")}\""
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt')
+        }
+    }
+
+    packagingOptions {
+        exclude 'LICENSE.txt'
+    }
+
+    spoon {
+        if (project.hasProperty('spoonClassName')) {
+            className = project.spoonClassName
         }
     }
 
@@ -65,6 +77,11 @@ android {
 dependencies {
     compile project(':twitter')
     compile rootProject.appCompat
+
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
+
+    androidTestCompile 'com.squareup.spoon:spoon-client:1.1.2'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.0'
+    androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
 }
