--- a/build.gradle
+++ b/build.gradle
@@ -63,5 +63,5 @@ ext {
 
     mockito = 'org.mockito:mockito-core:1.9.5'
     dexmakerMockito = 'com.google.dexmaker:dexmaker-mockito:1.2'
-    digits = 'com.digits.sdk.android:digits:1.6.0@aar'
+    digits = 'com.digits.sdk.android:digits:1.6.+@aar'
 }
