Create prep release gradle plugin
- Specify kits for release in gradle file rather than kits_for_release
  file

Change-Id: Ifa6ba4f77c37d1f6eefbd32f0a3b329d8dba91ac

--- a/twitter/internal-build.gradle
+++ b/twitter/internal-build.gradle
@@ -124,4 +124,4 @@ fabricKitRelease {
     }
 }
 
-project.tasks.getByName('fabricKitRelease').enabled = rootProject.ext.projectsForRelease.contains(project.path)
+project.tasks.getByName('fabricKitRelease').enabled = rootProject.ext.kitsForRelease.get(project.path)
