Make ProjectOrBinary plugin to replace kitDependency
Change-Id: I1c2a0ee03404e344a4249dbf9f70d3f008b438e9

--- a/tweet-composer/internal-build.gradle
+++ b/tweet-composer/internal-build.gradle
@@ -82,14 +82,14 @@ android {
 }
 
 ext.projectDependencies = [
-        ':sdk:fabric:fabric'
+        ':sdk:fabric:fabric' : 'io.fabric.sdk.android:fabric:+@aar'
 ]
 
 dependencies {
 
-    projectDependencies.each {
-        debugCompile project(path: it, configuration: 'debug')
-        releaseCompile kitDependency(path: it, configuration: 'release')
+    projectDependencies.each { path, binary ->
+        debugCompile project(path: path, configuration: 'debug')
+        releaseCompile projectOrBinary(path: path, configuration: 'release', binary: binary)
     }
 
     testCompile rootProject.mockito
