--- a/tweet-ui/internal-build.gradle
+++ b/tweet-ui/internal-build.gradle
@@ -90,15 +90,15 @@ android {
 }
 
 ext.projectDependencies = [
-        ':sdk:fabric:fabric',
-        ':sdk:twitter:twitter-core'
+        ':sdk:fabric:fabric' : 'io.fabric.sdk.android:fabric:+@aar',
+        ':sdk:twitter:twitter-core' : 'com.twitter.sdk.android:twitter-core:+@aar'
 ]
 
 dependencies {
 
-    projectDependencies.each {
-        debugCompile project(path: it, configuration: 'debug')
-        releaseCompile kitDependency(path: it, configuration: 'release')
+    projectDependencies.each { path, binary ->
+        debugCompile project(path: path, configuration: 'debug')
+        releaseCompile projectOrBinary(path: path, configuration: 'release', binary: binary)
     }
 
     compile 'com.squareup.picasso:picasso:2.5.2'
