Revert "Make ProjectOrBinary plugin to replace kitDependency"
This reverts commit 55a1a316ad251a4c60f1e5be5bf97a3f61c2dc93.

Change-Id: Id1ecf81e580f4b4ba87ba98511d6415c743ee0ce

--- a/tweet-composer/internal-build.gradle
+++ b/tweet-composer/internal-build.gradle
@@ -82,14 +82,14 @@ android {
 }
 
 ext.projectDependencies = [
-        ':sdk:fabric:fabric' : 'io.fabric.sdk.android:fabric:+@aar'
+        ':sdk:fabric:fabric'
 ]
 
 dependencies {
 
-    projectDependencies.each { path, binary ->
-        debugCompile project(path: path, configuration: 'debug')
-        releaseCompile projectOrBinary(path: path, configuration: 'release', binary: binary)
+    projectDependencies.each {
+        debugCompile project(path: it, configuration: 'debug')
+        releaseCompile kitDependency(path: it, configuration: 'release')
     }
 
     testCompile rootProject.mockito
