--- a/samples/app/build.gradle
+++ b/samples/app/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.stanfy.spoon:spoon-gradle-plugin:0.14.1'
+        classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.0.3'
         classpath 'com.android.tools.build:gradle:1.2.3'
         classpath 'io.fabric.tools:gradle:1.19.0'
     }
@@ -33,7 +33,7 @@ android {
     buildToolsVersion rootProject.buildToolsVersion
 
     defaultConfig {
-        applicationId "com.example.app"
+        applicationId "com.example.app.twitter"
         versionCode 1
         versionName "1.0"
         minSdkVersion 9
@@ -78,10 +78,10 @@ dependencies {
     compile project(':twitter')
     compile rootProject.appCompat
 
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
+    debugCompile rootProject.leakCanary
+    releaseCompile rootProject.leakCanaryNoOp
 
-    androidTestCompile 'com.squareup.spoon:spoon-client:1.1.2'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.0'
-    androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
+    androidTestCompile rootProject.spoon
+    androidTestCompile rootProject.espresso
+    androidTestCompile rootProject.androidTestingSupport
 }
