Specify configurations for sample apps
Change-Id: I135ff9b98d7de1c2ee50d3dee766aa254ef97562

--- a/samples/app/internal-build.gradle
+++ b/samples/app/internal-build.gradle
@@ -79,9 +79,10 @@ android {
 }
 
 dependencies {
-    compile project(':sdk:twitter:twitter')
-    compile rootProject.appCompat
+    debugCompile project(path: ':sdk:twitter:twitter', configuration: 'debug')
+    releaseCompile project(path: ':sdk:twitter:twitter', configuration: 'release')
 
+    compile rootProject.appCompat
     debugCompile rootProject.leakCanary
     releaseCompile rootProject.leakCanaryNoOp
 
