--- a/build.gradle
+++ b/build.gradle
@@ -50,20 +50,28 @@ ext {
     buildToolsVersion = '22.0.1'
     buildNumber = 'dev'
 
+    // Fabric
     fabric = 'io.fabric.sdk.android:fabric:1.3.+@aar'
     fabricTest = 'io.fabric.sdk.android:fabric-test:0.0.+@aar'
+    digits = 'com.digits.sdk.android:digits:1.6.+@aar'
 
+    // Sample App
     leakCanary = 'com.squareup.leakcanary:leakcanary-android:1.3'
     leakCanaryNoOp = 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
+    appCompat = 'com.android.support:appcompat-v7:21.0.2'
+
+    // Tests
     spoon = 'com.squareup.spoon:spoon-client:1.1.10'
     espresso = 'com.android.support.test.espresso:espresso-core:2.0'
     androidTestingSupport = 'com.android.support.test:testing-support-lib:0.1'
     junit = 'junit:junit:4.12'
     junitAddons = 'junit-addons:junit-addons:1.4'
     robolectric = 'org.robolectric:robolectric:3.0-rc2'
+    mockito = 'org.mockito:mockito-core:1.9.5'
+    dexmakerMockito = 'com.google.dexmaker:dexmaker-mockito:1.2'
     mavenAntTasks = 'org.apache.maven:maven-ant-tasks:2.1.3'
-    fest = 'com.squareup:fest-android:1.0.8'
-    appCompat = 'com.android.support:appcompat-v7:21.0.2'
+
+    // Other
     picasso = 'com.squareup.picasso:picasso:2.5.2'
     supportV4 = 'com.android.support:support-v4:21.0.0'
     retrofit = 'com.squareup.retrofit:retrofit:1.6.1'
@@ -71,8 +79,4 @@ ext {
     gson = 'com.google.code.gson:gson:2.2.4'
     okHttp = 'com.squareup.okhttp:okhttp:2.0.0'
     okHttpUrlConnection = 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
-
-    mockito = 'org.mockito:mockito-core:1.9.5'
-    dexmakerMockito = 'com.google.dexmaker:dexmaker-mockito:1.2'
-    digits = 'com.digits.sdk.android:digits:1.6.+@aar'
 }
