--- a/tweet-ui/build.gradle
+++ b/tweet-ui/build.gradle
@@ -17,6 +17,10 @@
 
 apply plugin: 'com.android.library'
 
+applyInternal from: rootProject.qualityScript
+applyInternal plugin: 'io.fabric.gradle.weaving.ArtifactSizePlugin'
+applyInternal plugin: 'io.fabric.gradle.weaving.DexMethodCountPlugin'
+
 android {
     compileSdkVersion rootProject.compileSdkVersion
     buildToolsVersion rootProject.buildToolsVersion
@@ -60,6 +64,12 @@ android {
 
     testOptions {
         unitTests.returnDefaultValues = true
+    }
+}
+
+internal {
+    dexMethodCount {
+        packageFilter = "com.twitter.sdk.android.tweetui"
     }
 }
 
