Update the Twitter Kit sample app and appcompat
Change-Id: Id10a15b0bef7b59aa07909cab8e39a6e6876cc50

--- a/samples/app/build.gradle
+++ b/samples/app/build.gradle
@@ -76,7 +76,7 @@ android {
 
 dependencies {
     compile project(':twitter')
-    compile rootProject.appCompat
+    compile 'com.android.support:appcompat-v7:22.2.1'
 
     debugCompile rootProject.leakCanary
     releaseCompile rootProject.leakCanaryNoOp
