--- a/samples/app/internal-build.gradle
+++ b/samples/app/internal-build.gradle
@@ -82,7 +82,7 @@ dependencies {
     debugCompile project(path: ':sdk:twitter:twitter', configuration: 'debug')
     releaseCompile project(path: ':sdk:twitter:twitter', configuration: 'release')
 
-    compile rootProject.appCompat
+    compile 'com.android.support:appcompat-v7:22.2.1'
     debugCompile rootProject.leakCanary
     releaseCompile rootProject.leakCanaryNoOp
 
