Switch to material tabs
Change-Id: I7eb5157adb6aeb7c882711d0d927f3f008818cb6

--- a/samples/app/internal-build.gradle
+++ b/samples/app/internal-build.gradle
@@ -83,6 +83,7 @@ dependencies {
     releaseCompile project(path: ':sdk:twitter:twitter', configuration: 'release')
 
     compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:design:22.2.0'
     debugCompile rootProject.leakCanary
     releaseCompile rootProject.leakCanaryNoOp
 
