--- a/samples/app/build.gradle
+++ b/samples/app/build.gradle
@@ -77,6 +77,7 @@ android {
 dependencies {
     compile project(':twitter')
     compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:design:22.2.0'
 
     debugCompile rootProject.leakCanary
     releaseCompile rootProject.leakCanaryNoOp
