--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,7 @@ ext {
     androidTestingSupport = 'com.android.support.test:testing-support-lib:0.1'
     junit = 'junit:junit:4.12'
     junitAddons = 'junit-addons:junit-addons:1.4'
-    robolectric = 'org.robolectric:robolectric:3.0-rc2'
+    robolectric = 'org.robolectric:robolectric:3.0'
     mockito = 'org.mockito:mockito-core:1.9.5'
     dexmakerMockito = 'com.google.dexmaker:dexmaker-mockito:1.2'
     mavenAntTasks = 'org.apache.maven:maven-ant-tasks:2.1.3'
