Add Tweet Composer Activity UI
Change-Id: I8cb95ab973bc2bde423de325de9205fc1d34f4d4

--- a/tweet-composer/build.gradle
+++ b/tweet-composer/build.gradle
@@ -68,6 +68,10 @@ internal {
     }
 }
 
+ext.projectDependencies = [
+        ':twitter-core' : 'com.twitter.sdk.android:twitter-core:+@aar'
+]
+
 dependencies {
     compile rootProject.fabric
 
