--- a/tweet-composer/internal-build.gradle
+++ b/tweet-composer/internal-build.gradle
@@ -78,7 +78,8 @@ android {
 }
 
 ext.projectDependencies = [
-        ':sdk:fabric:fabric' : 'io.fabric.sdk.android:fabric:+@aar'
+        ':sdk:fabric:fabric' : 'io.fabric.sdk.android:fabric:+@aar',
+        ':sdk:twitter:twitter-core' : 'com.twitter.sdk.android:twitter-core:+aar'
 ]
 
 dependencies {
