Adding release notes into repo and task to upload.
Change-Id: Ib4abb54f7fd16629226aef07cd24937726f37579

--- a/twitter/internal-build.gradle
+++ b/twitter/internal-build.gradle
@@ -120,3 +120,14 @@ fabricKitRelease {
 }
 
 project.tasks.getByName('fabricKitRelease').enabled = rootProject.ext.kitsForRelease.get(project.path)
+
+task uploadFabricReleaseNotes(group: 'Release',
+        description: 'Upload Release Notes to S3 bucket kits-crashlytics-com',
+        type: io.fabric.gradle.weaving.FileUploadS3Task) {
+    enabled = rootProject.ext.kitsForRelease.get(project.path)
+    accessKey = System.properties['AWS_ACCESS_KEY_ID']
+    secretKey = System.properties['AWS_SECRET_ACCESS_KEY']
+    bucketName = System.properties['AWS_BUCKET']
+    destination = "android/com/twitter/sdk/android/twitter/${project.version}/twitter-${project.version}-release-notes.html"
+    srcFile = new File("${project.projectDir}/release-notes.html")
+}
