Initial commit for Twitter Unity project
* Added support for "Login with Twitter"
* Added support for request email
* Added support for logging out active user

Change-Id: Ibefbc4ffcdc3908b3a3bce964133d2c3d5aac119

--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,8 @@ ext {
             ":tweet-composer": false,
             ":tweet-ui": false,
             ":twitter": false,
-            ":twitter-core": false
+            ":twitter-core": false,
+            ":twitter-unity": false
     ]
 }
 
