Make Tweet Composer show user's avatar and post Tweets
* Add a ComposerActivity Intent Builder
* Accept TwitterSession argument and pass auth token extra

Change-Id: I9327d05193c49356c50630e473a82e1f6982873f

--- a/tweet-composer/build.gradle
+++ b/tweet-composer/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     }
 
     compile rootProject.fabric
+    compile rootProject.picasso
 
     testCompile rootProject.mockito
     testCompile rootProject.junit
