Revert "Add Tweet Composer Activity UI"
This reverts commit c1c4ad844ea0ab5a1ccfd08698d09ab6c02c82fc.

Change-Id: I24e3e9dddb70ad9e8082f6b07efcf41fc54032bd

--- a/tweet-composer/internal-build.gradle
+++ b/tweet-composer/internal-build.gradle
@@ -78,8 +78,7 @@ android {
 }
 
 ext.projectDependencies = [
-        ':sdk:fabric:fabric' : 'io.fabric.sdk.android:fabric:+@aar',
-        ':sdk:twitter:twitter-core' : 'com.twitter.sdk.android:twitter-core:+aar'
+        ':sdk:fabric:fabric' : 'io.fabric.sdk.android:fabric:+@aar'
 ]
 
 dependencies {
