--- a/tweet-composer/src/main/AndroidManifest.xml
+++ b/tweet-composer/src/main/AndroidManifest.xml
@@ -21,10 +21,6 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
-    <application>
-        <activity
-            android:name=".ComposerActivity"
-            android:exported="false"
-            android:windowSoftInputMode="adjustResize|stateVisible"/>
-    </application>
+    <application/>
+
 </manifest>
