Add Tweet Composer Activity UI
This reverts commit ae96938422cb5655206436eff73cd2196157fc69.

Change-Id: I36c2bc52a91e004d1c5c43c46c692f5bf8cc3fbe

--- a/tweet-composer/build.gradle
+++ b/tweet-composer/build.gradle
@@ -68,7 +68,15 @@ internal {
     }
 }
 
+ext.projectDependencies = [
+        ':twitter-core' : 'com.twitter.sdk.android:twitter-core:+@aar'
+]
+
 dependencies {
+    projectDependencies.each { path, binary ->
+        compile projectOrBinary(path: path, binary: binary)
+    }
+
     compile rootProject.fabric
 
     testCompile rootProject.mockito
