Move s3 upload to release plugin.
- Update twitter open source build to use the new version.

Change-Id: Ibc81e7b911d90a856ce758cee364c8a8af4b2016

--- a/twitter/build.gradle
+++ b/twitter/build.gradle
@@ -112,7 +112,7 @@ internal {
 
     task uploadFabricReleaseNotes(group: 'Release',
             description: 'Upload Release Notes to S3 bucket kits-crashlytics-com',
-            type: io.fabric.gradle.weaving.FileUploadS3Task) {
+            type: io.fabric.gradle.release.FileUploadS3Task) {
         enabled = rootProject.ext.kitsForRelease.get(project.path)
         accessKey = System.properties['AWS_ACCESS_KEY_ID']
         secretKey = System.properties['AWS_SECRET_ACCESS_KEY']
