Add ComposerApiClient with statuses update endpoint
Change-Id: I4c92942d864adcc6fc91c92af69dfee90ffea74a

--- a/tweet-composer/build.gradle
+++ b/tweet-composer/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     compile rootProject.fabric
     compile rootProject.picasso
 
+    testCompile rootProject.fabricTest
     testCompile rootProject.mockito
     testCompile rootProject.junit
     testCompile rootProject.mavenAntTasks
