--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,7 @@ ext {
     enableTestCodeCoverage = true
     compileSdkVersion = 22
     targetSdkVersion = 22
-    buildToolsVersion = '22.0.1'
+    buildToolsVersion = '23.0.1'
     buildNumber = 'dev'
 
     // Fabric
@@ -82,12 +82,12 @@ ext {
     // Sample App
     leakCanary = 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     leakCanaryNoOp = 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
-    appCompat = 'com.android.support:appcompat-v7:21.0.2'
+    appCompat = 'com.android.support:appcompat-v7:22.2.0'
 
     // Tests
     spoon = 'com.squareup.spoon:spoon-client:1.1.10'
-    espresso = 'com.android.support.test.espresso:espresso-core:2.0'
-    androidTestingSupport = 'com.android.support.test:testing-support-lib:0.1'
+    espresso = 'com.android.support.test.espresso:espresso-core:2.2'
+    androidTestingSupport = 'com.android.support.test:runner:0.3'
     junit = 'junit:junit:4.12'
     junitAddons = 'junit-addons:junit-addons:1.4'
     robolectric = 'org.robolectric:robolectric:3.0'
@@ -97,10 +97,11 @@ ext {
 
     // Other
     picasso = 'com.squareup.picasso:picasso:2.5.2'
-    supportV4 = 'com.android.support:support-v4:21.0.0'
+    supportV4 = 'com.android.support:support-v4:22.2.0'
     retrofit = 'com.squareup.retrofit:retrofit:1.8.0'
     retrofitMock = 'com.squareup.retrofit:retrofit-mock:1.8.0'
     gson = 'com.google.code.gson:gson:2.2.4'
     okHttp = 'com.squareup.okhttp:okhttp:2.3.0'
     okHttpUrlConnection = 'com.squareup.okhttp:okhttp-urlconnection:2.3.0'
+    design = 'com.android.support:design:22.2.0'
 }
