--- a/samples/app/internal-build.gradle
+++ b/samples/app/internal-build.gradle
@@ -82,8 +82,8 @@ dependencies {
     debugCompile project(path: ':sdk:twitter:twitter', configuration: 'debug')
     releaseCompile project(path: ':sdk:twitter:twitter', configuration: 'release')
 
-    compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.android.support:design:22.2.0'
+    compile rootProject.appCompat
+    compile rootProject.design
     debugCompile rootProject.leakCanary
     releaseCompile rootProject.leakCanaryNoOp
 
