Update deploy scripts to use new endpoint and add fields
Change-Id: I13704783fc39892681c9b9347322351c1bbdfa4f

--- a/twitter/internal-build.gradle
+++ b/twitter/internal-build.gradle
@@ -117,6 +117,9 @@ fabricKitRelease {
     minPlatformVersion {
         apiVersion "8"
     }
+    docsUrl = "https://docs.fabric.io/javadocs/twitter-core/${project.version}/index.html"
+    twitterHandle = "@twitterdev"
+    websiteUrl = "https://docs.fabric.io/android/twitter/index.html"
 }
 
 project.tasks.getByName('fabricKitRelease').enabled = rootProject.ext.kitsForRelease.get(project.path)
