--- a/twitter/build.gradle
+++ b/twitter/build.gradle
@@ -108,6 +108,9 @@ internal {
         minPlatformVersion {
             apiVersion "8"
         }
+        docsUrl = "https://docs.fabric.io/javadocs/twitter-core/${project.version}/index.html"
+        twitterHandle = "@twitterdev"
+        websiteUrl = "https://docs.fabric.io/android/twitter/index.html"
     }
 
     task uploadFabricReleaseNotes(group: 'Release',
